deploy-manifest/base/service.yml
apiVersion: v1
kind: Service
metadata:
    name: web-service
spec:
  selector:
    app: web
  type: NodePort
